# Tucil2_13524127_13524132

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  obj_io.cpp  obj_io.h  octree.cpp  octree.h  types.h  viewer.cpp  viewer.h  voxelizer.cpp  voxelizer.h
